--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-body > div {
-    margin-top: 3rem;
+.App {
+    min-height: 100vh;
 }
