배너 디자인

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nerko+One&family=New+Amsterdam&display=swap');
+
+
 .App {
+    max-width: 100vw;
     min-height: 100vh;
+    background-color: black;
+    margin: 0;
+    color: white !important;
+
+    overflow-x:hidden;
 }
