--- a/src/pages/Homepage/components/Banner/Banner.style.css
+++ b/src/pages/Homepage/components/Banner/Banner.style.css
@@ -3,6 +3,7 @@
     min-width: 100vw;
     background-size: cover;
     background-position: left;
+    border: none;
 }
 
 .banner-container::before {
@@ -26,4 +27,17 @@
     align-items: flex-start;
 
     padding: 2rem;
+}
+
+@media screen and (max-width: 699px) {
+    .title-container {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-content: flex-start;
+        justify-content: flex-end;
+
+        position: absolute;
+        z-index: 1;
+    }
 }
